--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,9 @@ services:
     volumes:
       - ./mysql:/var/lib/mysql
     environment: 
-      MYSQL_DATABASE: homestead
-      MYSQL_USER: homestead
-      MYSQL_PASSWORD: secret
+      MYSQL_DATABASE: jamformatkassar
+      MYSQL_USER: highest1
+      MYSQL_PASSWORD: ~25gp2vN
       MYSQL_ROOT_PASSWORD: secret
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
